Fixed spacing between team member images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -487,6 +487,7 @@ section {
   background: #fff;
   box-shadow: 0px 2px 15px rgba(18, 66, 101, 0.08);
   width:100%;
+  height: 90%;
 }
 
 #team .member .member-img {
